--- a/_config.yml
+++ b/_config.yml
@@ -2,104 +2,12 @@ markdown: kramdown
 issues:
 - issue: accepted
   articles:
-  - title: 'PracTools: Computations for Design of Finite Population Samples'
-    slug: valliant-dever-kreuter
-    author:
-    - Richard Valliant
-    - Jill A. Dever
-    - Frauke Kreuter
-  - title: 'zoib: An R package for Bayesian Inference for Zero/One Inflated Beta Regression Model'
-    slug: liu-kong
-    author:
-    - Fang Liu
-    - Yunchuan Kong
-  - title: 'abctools: An R Package for Tuning Approximate Bayesian Computation Analyses'
-    slug: nunes-prangle
-    author:
-    - Matthew A. Nunes
-    - Dennis Prangle
-  - title: 'SRCS: Statistical Ranking Color Scheme for Visualizing Parameterized Multiple Pairwise Comparisons with R'
-    slug: villacorta-saez
-    author:
-    - Pablo J. Villacorta
-    - José A. Sáez
-    bibauthor:
-    - Pablo J. Villacorta
-    - Jos{\' e} A. S{\' a}ez
-  - title: 'apc: A Package for Age-Period-Cohort Analysis'
-    slug: nielsen
-    author:
-    - Bent Nielsen
-  - title: 'BSGS: Bayesian Sparse Group Selection'
-    slug: lee-chen
-    author:
-    - Kuo-Jung Lee
-    - Ray-Bing Chen
-  - title: 'Fitting Conditional and Simultaneous Autoregressive Spatial Models in hglm'
-    slug: alam-roennegaard-shen
-    author:
-    - Moudud Alam
-    - Lars Rönnegård
-    - Xia Shen
-    bibauthor:
-    - Moudud Alam
-    - Lars R\"onneg{\aa}rd
-    - Xia Shen
-  - title: 'Working with Multilabel Datasets in R: The mldr Package'
-    slug: charte-charte
-    author: 
-    - Francisco Charte
-    - David Charte
-  - title: 'treeClust: An R Package For Tree-Based Clustering Dissimilarities'
-    slug: buttrey-whitaker
-    author: 
-    - Samuel E. Buttrey
-    - Lyn R. Whitaker
-  - title: 'mmpp: A Package for Calculating Similarity and Distance Metrics for Simple and Marked Point Process'
-    slug: hino-takano-murata
-    author:
-    - Hideitsu Hino
-    - Ken Takano
-    - Noboru Murata
-  - title: 'ALTopt: An R Package for Optimal Experimental Design of Accelerated Life Testing'
-    slug: seo-pan
-    author:
-    - Kangwon Seo
-    - Rong Pan
-  - title: 'mtk (Mexico Toolkit): An R Package for Uncertainty and Sensitivity Analyses of Numerical Experiments'
-    slug: wang-faivre-richard-monod
-    author:
-    - Juhui Wang
-    - Robert Faivre
-    - Hervé Richard
-    - Hervé Monod
-    bibauthor:
-    - Juhui Wang
-    - Robert Faivre
-    - Herv{\' e} Richard
-    - Herv{\' e} Monod
   - title: 'Heteroscedastic Censored and Truncated Regression with crch'
     slug: messner-mayr-zeileis
     author:
     - Jakob W. Messner
     - Georg J. Mayr
     - Achim Zeileis
-  - title: 'ClustVarLV: An R Package for the Clustering of Variables Around Latent Variables'
-    slug: vigneau-chen-qannari
-    author:
-    - Evelyne Vigneau
-    - Mingkun Chen
-    - El Mostafa Qannari
-  - title: 'QuantifQuantile: An R Package for Performing Quantile Regression Through Optimal Quantization'
-    slug: charlier-paindaveine-saracco
-    author:
-    - Isabelle Charlier
-    - Davy Paindaveine
-    - Jérôme Saracco
-    bibauthor:
-    - Isabelle Charlier
-    - Davy Paindaveine, 
-    - J{\' e}r{\^ o}me Saracco
   - title: 'An Interactive Survey Application for Validating Social Network Analysis Techniques'
     slug: joblin-mauerer
     author:
@@ -113,25 +21,6 @@ issues:
     bibauthor:
     - Daniel Linares
     - Joan L{\' o}pez-Moliner
-  - title: 'VSURF: An R Package for Variable Selection Using Random Forests'
-    slug: genuer-poggi-tuleau-malot
-    author:
-    - Robin Genuer
-    - Jean-Michel Poggi
-    - Christine Tuleau-Malot
-  - title: 'An R Package for the Panel Data Approach for Program Evaluation: pampe'
-    slug: vega-bayo
-    author:
-    - Ainhoa Vega-Bayo
-  - title: 'Code Profiling in R: A Review of Existing Methods and an Introduction to Package GUIProfiler'
-    slug: rubio-de-villar
-    author:
-    - Angel Rubio
-    - Fernando de Villar
-  - title: 'Numerical Evaluation of the Gauss Hypergeometric Function with the hypergeo Package'
-    slug: hankin
-    author:
-    - Robin K. S. Hankin
   - title: 'scmamp: Statistical Comparison of Multiple Algorithms in Multiple Problems'
     slug: calvo-santafe
     author:
@@ -140,23 +29,6 @@ issues:
     bibauthor:
     - Borja Calvo
     - Guzm{\' a}n Santaf{\' e}
-  - title: 'Open-Channel Computation with R'
-    slug: koohafkan-younis
-    author:
-    - Michael C. Koohafkan
-    - Bassam A. Younis
-  - title: 'Generalized Hermite Distribution Modelling with the R Package hermite'
-    slug: morina-higueras-puig-oliveira
-    author:
-    - David Moriña
-    - Manuel Higueras
-    - Pedro Puig
-    - María Oliveira
-    bibauthor:
-    - David Mori{\~n}a
-    - Manuel Higueras
-    - Pedro Puig
-    - Mar{\' i}a Oliveira
   - title: 'Stylometry with R: A Package for Computational Text Analysis'
     slug: eder-rybicki-kestemont
     author:
@@ -2198,4 +2070,243 @@ issues:
     pages:
     - 239
     - 240
+- issue: 2015-2
+  year: 2015
+  volume: 7
+  num: 2
+  month: dec
+  articles:
+  - title: Editorial
+    author: Bettina Grün
+    bibauthor: Bettina Gr{\" u}n
+    slug: editorial
+    pages:
+    - 4
+  - heading: Contributed Research Articles
+  - title: Fitting Conditional and Simultaneous Autoregressive Spatial Models in hglm
+    slug: alam-ronnegard-shen
+    author:
+    - Moudud Alam
+    - Lars Rönnegård
+    - Xia Shen
+    bibauthor:
+    - Moudud Alam
+    - Lars R\"onneg{\aa}rd
+    - Xia Shen
+    pages:
+    - 5
+    - 18
+  - title: 'VSURF: An R Package for Variable Selection Using Random Forests'
+    slug: genuer-poggi-tuleaumalot
+    author:
+    - Robin Genuer
+    - Jean-Michel Poggi
+    - Christine Tuleau-Malot
+    pages:
+    - 19
+    - 33
+  - title: 'zoib: An R package for Bayesian Inference for Zero/One Inflated Beta Regression
+      Model'
+    slug: liu-kong
+    author:
+    - Fang Liu
+    - Yunchuan Kong
+    pages:
+    - 34
+    - 51
+  - title: 'apc: A Package for Age-Period-Cohort Analysis'
+    slug: nielsen
+    author: Bent Nielsen
+    pages:
+    - 52
+    - 64
+  - title: 'QuantifQuantile: An R Package for Performing Quantile Regression Through
+      Optimal Quantization'
+    slug: charlier-paindaveine-saracco
+    author:
+    - Isabelle Charlier
+    - Davy Paindaveine
+    - Jérôme Saracco
+    bibauthor:
+    - Isabelle Charlier
+    - Davy Paindaveine, 
+    - J{\' e}r{\^ o}me Saracco
+    pages:
+    - 65
+    - 80
+  - title: Numerical Evaluation of the Gauss Hypergeometric Function with the hypergeo
+      Package
+    slug: hankin
+    author: Robin K. S. Hankin
+    pages:
+    - 81
+    - 88
+  - title: 'SRCS: Statistical Ranking Color Scheme for Visualizing Parameterized Multiple
+      Pairwise Comparisons with R'
+    slug: villacorta-saez
+    author:
+    - Pablo J. Villacorta
+    - José A. Sáez
+    bibauthor:
+    - Pablo J. Villacorta
+    - Jos{\' e} A. S{\' a}ez
+    pages:
+    - 89
+    - 104
+  - title: 'An R Package for the Panel Data Approach for Program Evaluation: pampe'
+    slug: vegabayo
+    author: Ainhoa Vega-Bayo
+    pages:
+    - 105
+    - 121
+  - title: 'BSGS: Bayesian Sparse Group Selection'
+    slug: lee-chen
+    author:
+    - Kuo-Jung Lee
+    - Ray-Bing Chen
+    pages:
+    - 122
+    - 133
+  - title: 'ClustVarLV: An R Package for the Clustering of Variables Around Latent
+      Variables'
+    slug: vigneau-chen-qannari
+    author:
+    - Evelyne Vigneau
+    - Mingkun Chen
+    - El Mostafa Qannari
+    pages:
+    - 134
+    - 148
+  - title: 'Working with Multilabel Datasets in R: The mldr Package'
+    slug: charte-charte
+    author:
+    - Francisco Charte
+    - David Charte
+    pages:
+    - 149
+    - 162
+  - title: 'PracTools: Computations for Design of Finite Population Samples'
+    slug: valliant-dever-kreuter
+    author:
+    - Richard Valliant
+    - Jill A. Dever
+    - Frauke Kreuter
+    pages:
+    - 163
+    - 176
+  - title: 'ALTopt: An R Package for Optimal Experimental Design of Accelerated Life
+      Testing'
+    slug: seo-pan
+    author:
+    - Kangwon Seo
+    - Rong Pan
+    pages:
+    - 177
+    - 188
+  - title: 'abctools: An R Package for Tuning Approximate Bayesian Computation Analyses'
+    slug: nunes-prangle
+    author:
+    - Matthew A. Nunes
+    - Dennis Prangle
+    pages:
+    - 189
+    - 205
+  - title: 'mtk (Mexico Toolkit): An R Package for Uncertainty and Sensitivity Analyses
+      of Numerical Experiments'
+    slug: wang-faivre-richard-etal
+    author:
+    - Juhui Wang
+    - Robert Faivre
+    - Hervé Richard
+    - Hervé Monod
+    bibauthor:
+    - Juhui Wang
+    - Robert Faivre
+    - Herv{\' e} Richard
+    - Herv{\' e} Monod
+    pages:
+    - 206
+    - 226
+  - title: 'treeClust: An R Package For Tree-Based Clustering Dissimilarities'
+    slug: buttrey-whitaker
+    author:
+    - Samuel E. Buttrey
+    - Lyn R. Whitaker
+    pages:
+    - 227
+    - 236
+  - title: 'mmpp: A Package for Calculating Similarity and Distance Metrics for Simple
+      and Marked Point Processes'
+    slug: hino-takano-murata
+    author:
+    - Hideitsu Hino
+    - Ken Takano
+    - Noboru Murata
+    pages:
+    - 237
+    - 248
+  - title: Open-Channel Computation with R
+    slug: koohafkan-younis
+    author:
+    - Michael C. Koohafkan
+    - Bassam A. Younis
+    pages:
+    - 249
+    - 262
+  - title: Generalized Hermite Distribution Modelling with the R Package hermite
+    slug: morina-higueras-puig-etal
+    author:
+    - David Moriña
+    - Manuel Higueras
+    - Pedro Puig
+    - María Oliveira
+    bibauthor:
+    - David Mori{\~n}a
+    - Manuel Higueras
+    - Pedro Puig
+    - Mar{\' i}a Oliveira
+    pages:
+    - 263
+    - 274
+  - title: 'Code Profiling in R: A Review of Existing Methods and an Introduction to Package GUIProfiler'
+    slug: rubio-villar
+    author:
+    - Angel Rubio
+    - Fernando de Villar
+    pages:
+    - 275
+    - 287
+  - heading: News and Notes
+  - title: The R Consortium and the R Foundation
+    slug: plummer
+    author: Martyn Plummer
+    pages:
+    - 288
+  - title: 'Conference Report: useR! 2015'
+    slug: tvedebrink
+    author: Torben Tvedebrink
+    pages:
+    - 289
+    - 290
+  - title: Changes on CRAN
+    author:
+    - Kurt Hornik
+    - Achim Zeileis
+    slug: cran
+    pages:
+    - 291
+    - 292
+  - title: Changes in R
+    author: The R Core Team
+    slug: r-changes
+    pages:
+    - 293
+    - 297
+  - title: News from the Bioconductor Project
+    author: The Bioconductor Team
+    slug: bioconductor
+    pages:
+    - 298
+    - 339
+ 
  
