--- a/_config.yml
+++ b/_config.yml
@@ -2074,7 +2074,8 @@ issues:
   year: 2015
   volume: 7
   num: 2
-  month: dec
+  month: Dec.
+  bibmonth: dec
   articles:
   - title: Editorial
     author: Bettina Grün
