--- a/_config.yml
+++ b/_config.yml
@@ -2098,6 +2098,7 @@ issues:
     - 5
     - 18
   - title: 'VSURF: An R Package for Variable Selection Using Random Forests'
+    bibtitle: '{VSURF}: An {R} Package for Variable Selection Using Random Forests'
     slug: genuer-poggi-tuleaumalot
     author:
     - Robin Genuer
@@ -2106,8 +2107,8 @@ issues:
     pages:
     - 19
     - 33
-  - title: 'zoib: An R package for Bayesian Inference for Zero/One Inflated Beta Regression
-      Model'
+  - title: 'zoib: An R Package for Bayesian Inference for Zero/One Inflated Beta Regression Model'
+    bibtitle: 'zoib: An {R} Package for Bayesian Inference for Zero/One Inflated Beta Regression Model'
     slug: liu-kong
     author:
     - Fang Liu
@@ -2121,8 +2122,8 @@ issues:
     pages:
     - 52
     - 64
-  - title: 'QuantifQuantile: An R Package for Performing Quantile Regression Through
-      Optimal Quantization'
+  - title: 'QuantifQuantile: An R Package for Performing Quantile Regression Through Optimal Quantization'
+    bibtitle: '{QuantifQuantile}: An {R} Package for Performing Quantile Regression Through Optimal Quantization'
     slug: charlier-paindaveine-saracco
     author:
     - Isabelle Charlier
@@ -2135,15 +2136,15 @@ issues:
     pages:
     - 65
     - 80
-  - title: Numerical Evaluation of the Gauss Hypergeometric Function with the hypergeo
-      Package
+  - title: Numerical Evaluation of the Gauss Hypergeometric Function with the hypergeo Package
+    bibtitle: 'Numerical Evaluation of the {G}auss Hypergeometric Function with the hypergeo Package'
     slug: hankin
     author: Robin K. S. Hankin
     pages:
     - 81
     - 88
-  - title: 'SRCS: Statistical Ranking Color Scheme for Visualizing Parameterized Multiple
-      Pairwise Comparisons with R'
+  - title: 'SRCS: Statistical Ranking Color Scheme for Visualizing Parameterized Multiple Pairwise Comparisons with R'
+    bibtitle: '{SRCS}: Statistical Ranking Color Scheme for Visualizing Parameterized Multiple Pairwise Comparisons with {R}'
     slug: villacorta-saez
     author:
     - Pablo J. Villacorta
@@ -2155,12 +2156,14 @@ issues:
     - 89
     - 104
   - title: 'An R Package for the Panel Data Approach for Program Evaluation: pampe'
+    bibtitle: 'An {R} Package for the Panel Data Approach for Program Evaluation: pampe'
     slug: vegabayo
     author: Ainhoa Vega-Bayo
     pages:
     - 105
     - 121
   - title: 'BSGS: Bayesian Sparse Group Selection'
+    bibtitle: '{BSGS}: {B}ayesian Sparse Group Selection'
     slug: lee-chen
     author:
     - Kuo-Jung Lee
@@ -2168,8 +2171,8 @@ issues:
     pages:
     - 122
     - 133
-  - title: 'ClustVarLV: An R Package for the Clustering of Variables Around Latent
-      Variables'
+  - title: 'ClustVarLV: An R Package for the Clustering of Variables Around Latent Variables'
+    bibtitle: '{ClustVarLV}: An {R} Package for the Clustering of Variables Around Latent Variables'
     slug: vigneau-chen-qannari
     author:
     - Evelyne Vigneau
@@ -2179,6 +2182,7 @@ issues:
     - 134
     - 148
   - title: 'Working with Multilabel Datasets in R: The mldr Package'
+    bibtitle: 'Working with Multilabel Datasets in {R}: The mldr Package'
     slug: charte-charte
     author:
     - Francisco Charte
@@ -2187,6 +2191,7 @@ issues:
     - 149
     - 162
   - title: 'PracTools: Computations for Design of Finite Population Samples'
+    bibtitle: '{PracTools}: Computations for Design of Finite Population Samples'
     slug: valliant-dever-kreuter
     author:
     - Richard Valliant
@@ -2195,8 +2200,8 @@ issues:
     pages:
     - 163
     - 176
-  - title: 'ALTopt: An R Package for Optimal Experimental Design of Accelerated Life
-      Testing'
+  - title: 'ALTopt: An R Package for Optimal Experimental Design of Accelerated Life Testing'
+    bibtitle: '{ALTopt}: An {R} Package for Optimal Experimental Design of Accelerated Life Testing'
     slug: seo-pan
     author:
     - Kangwon Seo
@@ -2205,6 +2210,7 @@ issues:
     - 177
     - 188
   - title: 'abctools: An R Package for Tuning Approximate Bayesian Computation Analyses'
+    bibtitle: '{abctools}: An {R} Package for Tuning Approximate {B}ayesian Computation Analyses'
     slug: nunes-prangle
     author:
     - Matthew A. Nunes
@@ -2212,8 +2218,8 @@ issues:
     pages:
     - 189
     - 205
-  - title: 'mtk (Mexico Toolkit): An R Package for Uncertainty and Sensitivity Analyses
-      of Numerical Experiments'
+  - title: 'mtk (Mexico Toolkit): An R Package for Uncertainty and Sensitivity Analyses of Numerical Experiments'
+    bibtitle: '{mtk} ({M}exico {T}oolkit): An {R} Package for Uncertainty and Sensitivity Analyses of Numerical Experiments'
     slug: wang-faivre-richard-etal
     author:
     - Juhui Wang
@@ -2229,6 +2235,7 @@ issues:
     - 206
     - 226
   - title: 'treeClust: An R Package For Tree-Based Clustering Dissimilarities'
+    bibtitle: '{treeClust}: An {R} Package For Tree-Based Clustering Dissimilarities'
     slug: buttrey-whitaker
     author:
     - Samuel E. Buttrey
@@ -2236,8 +2243,7 @@ issues:
     pages:
     - 227
     - 236
-  - title: 'mmpp: A Package for Calculating Similarity and Distance Metrics for Simple
-      and Marked Point Processes'
+  - title: 'mmpp: A Package for Calculating Similarity and Distance Metrics for Simple and Marked Point Processes'
     slug: hino-takano-murata
     author:
     - Hideitsu Hino
@@ -2247,6 +2253,7 @@ issues:
     - 237
     - 248
   - title: Open-Channel Computation with R
+    bibtitle: 'Open-Channel Computation with {R}'
     slug: koohafkan-younis
     author:
     - Michael C. Koohafkan
@@ -2255,6 +2262,7 @@ issues:
     - 249
     - 262
   - title: Generalized Hermite Distribution Modelling with the R Package hermite
+    bibtitle: 'Generalized {H}ermite Distribution Modelling with the {R} Package hermite'
     slug: morina-higueras-puig-etal
     author:
     - David Moriña
@@ -2270,6 +2278,7 @@ issues:
     - 263
     - 274
   - title: 'Code Profiling in R: A Review of Existing Methods and an Introduction to Package GUIProfiler'
+    bibtitle: 'Code Profiling in {R}: A Review of Existing Methods and an Introduction to Package {GUIProfiler}'
     slug: rubio-villar
     author:
     - Angel Rubio
@@ -2279,17 +2288,20 @@ issues:
     - 287
   - heading: News and Notes
   - title: The R Consortium and the R Foundation
+    bibtitle: 'The {R} Consortium and the {R} Foundation'
     slug: plummer
     author: Martyn Plummer
     pages:
     - 288
   - title: 'Conference Report: useR! 2015'
+    bibtitle: 'Conference Report: {useR!} 2015'
     slug: tvedebrink
     author: Torben Tvedebrink
     pages:
     - 289
     - 290
   - title: Changes on CRAN
+    bibtitle: 'Changes on {CRAN}'
     author:
     - Kurt Hornik
     - Achim Zeileis
@@ -2298,12 +2310,14 @@ issues:
     - 291
     - 292
   - title: Changes in R
+    bibtitle: 'Changes in {R}'
     author: The R Core Team
     slug: r-changes
     pages:
     - 293
     - 297
   - title: News from the Bioconductor Project
+    bibtitle: 'News from the {B}ioconductor Project'
     author: The Bioconductor Team
     slug: bioconductor
     pages:
