--- a/_config.yml
+++ b/_config.yml
@@ -2218,8 +2218,8 @@ issues:
     pages:
     - 189
     - 205
-  - title: 'mtk (Mexico Toolkit): An R Package for Uncertainty and Sensitivity Analyses of Numerical Experiments'
-    bibtitle: '{mtk} ({M}exico {T}oolkit): An {R} Package for Uncertainty and Sensitivity Analyses of Numerical Experiments'
+  - title: 'mtk: A General-Purpose and Extensible R Environment for Uncertainty and Sensitivity Analyses of Numerical Experiments'
+    bibtitle: '{mtk}: A General-Purpose and Extensible {R} Environment for Uncertainty and Sensitivity Analyses of Numerical Experiments'
     slug: wang-faivre-richard-etal
     author:
     - Juhui Wang
