--- a/_config.yml
+++ b/_config.yml
@@ -2107,8 +2107,8 @@ issues:
     pages:
     - 19
     - 33
-  - title: 'zoib: An R Package for Bayesian Inference for Zero/One Inflated Beta Regression Model'
-    bibtitle: 'zoib: An {R} Package for Bayesian Inference for Zero/One Inflated Beta Regression Model'
+  - title: 'zoib: An R Package for Bayesian Inference for Beta Regression and Zero/One Inflated Beta Regression'
+    bibtitle: 'zoib: An {R} Package for Bayesian Inference for Beta Regression and Zero/One Inflated Beta Regression'
     slug: liu-kong
     author:
     - Fang Liu
@@ -2116,7 +2116,8 @@ issues:
     pages:
     - 34
     - 51
-  - title: 'apc: A Package for Age-Period-Cohort Analysis'
+  - title: 'apc: An R Package for Age-Period-Cohort Analysis'
+    bibtitle: '{apc}: An {R} Package for Age-Period-Cohort Analysis'
     slug: nielsen
     author: Bent Nielsen
     pages:
@@ -2155,8 +2156,8 @@ issues:
     pages:
     - 89
     - 104
-  - title: 'An R Package for the Panel Data Approach for Program Evaluation: pampe'
-    bibtitle: 'An {R} Package for the Panel Data Approach for Program Evaluation: pampe'
+  - title: 'An R Package for the Panel Approach Method for Program Evaluation: pampe'
+    bibtitle: 'An {R} Package for the Panel Approach Method for Program Evaluation: pampe'
     slug: vegabayo
     author: Ainhoa Vega-Bayo
     pages:
@@ -2234,8 +2235,8 @@ issues:
     pages:
     - 206
     - 226
-  - title: 'treeClust: An R Package For Tree-Based Clustering Dissimilarities'
-    bibtitle: '{treeClust}: An {R} Package For Tree-Based Clustering Dissimilarities'
+  - title: 'treeClust: An R Package for Tree-Based Clustering Dissimilarities'
+    bibtitle: '{treeClust}: An {R} Package for Tree-Based Clustering Dissimilarities'
     slug: buttrey-whitaker
     author:
     - Samuel E. Buttrey
@@ -2300,12 +2301,10 @@ issues:
     pages:
     - 289
     - 290
-  - title: Changes on CRAN
-    bibtitle: 'Changes on {CRAN}'
-    author:
-    - Kurt Hornik
-    - Achim Zeileis
-    slug: cran
+  - title: News from the Bioconductor Project
+    bibtitle: 'News from the {B}ioconductor Project'
+    author: The Bioconductor Team
+    slug: bioconductor
     pages:
     - 291
     - 292
@@ -2316,10 +2315,12 @@ issues:
     pages:
     - 293
     - 297
-  - title: News from the Bioconductor Project
-    bibtitle: 'News from the {B}ioconductor Project'
-    author: The Bioconductor Team
-    slug: bioconductor
+  - title: Changes on CRAN
+    bibtitle: 'Changes on {CRAN}'
+    author:
+    - Kurt Hornik
+    - Achim Zeileis
+    slug: cran
     pages:
     - 298
     - 339
