fix missing years in footer, and fix end page numbers in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -998,7 +998,7 @@ issues:
     slug: editorial
     pages:
     - 4
-    - 6
+    - 5
   - heading: Contributed Research Articles
   - title: 'RTextTools: A Supervised Learning Package for Text Classification'
     bibtitle: '{RTextTools}: A Supervised Learning Package for Text Classification'
@@ -1011,7 +1011,7 @@ issues:
     - Wouter van Atteveldt
     pages:
     - 6
-    - 13
+    - 12
   - title: 'Generalized Simulated Annealing for Global Optimization: the GenSA Package for R'
     bibtitle: 'Generalized Simulated Annealing for Global Optimization: the {GenSA} Package for {R}'
     slug: xiang-gubian-suomela-etal
@@ -1022,7 +1022,7 @@ issues:
     - Julia Hoeng
     pages:
     - 13
-    - 29
+    - 28
   - title: Multiple Factor Analysis on Contingency Tables in the FactoMineR Package
     bibtitle: 'Multiple Factor Analysis on Contingency Tables in the {FactoMineR} Package'
     slug: kostov-becuebertaut-husson
@@ -1036,7 +1036,7 @@ issues:
     - Fran{\c c}ois Husson
     pages:
     - 29
-    - 39
+    - 38
   - title: Hypothesis Tests for Multivariate Linear Models Using the car Package
     bibtitle: 'Hypothesis Tests for Multivariate Linear Models Using the {car} Package'
     slug: fox-friendly-weisberg
@@ -1046,7 +1046,7 @@ issues:
     - Sanford Weisberg
     pages:
     - 39
-    - 53
+    - 52
   - title: 'osmar: OpenStreetMap and R'
     bibtitle: '{osmar}: {OpenStreetMap} and {R}'
     slug: eugster-schlesinger
@@ -1055,27 +1055,27 @@ issues:
     - Thomas Schlesinger
     pages:
     - 53
-    - 64
+    - 63
   - title: 'ftsa: An R Package for Analyzing Functional Time Series'
     bibtitle: '{ftsa}: An {R} Package for Analyzing Functional Time Series'
     slug: shang
     author: Han Shang
     pages:
     - 64
-    - 73
+    - 72
   - title: Statistical Analysis from a Blind Person's Perspective
     slug: godfrey
     author: A. Jonathan R. Godfrey
     pages:
     - 73
-    - 80
+    - 79
   - title: 'PIN: Measuring Asymmetric Information in Financial Markets with R'
     bibtitle: '{PIN}: Measuring Asymmetric Information in Financial Markets with {R}'
     slug: zagaglia
     author: Paolo Zagaglia
     pages:
     - 80
-    - 87
+    - 86
   - title: 'QCA: A Package for Qualitative Comparative Analysis'
     bibtitle: '{QCA}: A Package for Qualitative Comparative Analysis'
     slug: thiem-dusa
@@ -1084,7 +1084,7 @@ issues:
     - Adrian Dusa
     pages:
     - 87
-    - 98
+    - 97
   - title: 'An Introduction to the EcoTroph R package: Analyzing Aquatic Ecosystem Trophic Network'
     bibtitle: 'An Introduction to the {EcoTroph} {R} package: Analyzing Aquatic Ecosystem Trophic Network'
     slug: colleter-guitton-gascuel
@@ -1094,7 +1094,7 @@ issues:
     - Didier Gascuel
     pages:
     - 98
-    - 108
+    - 107
   - title: 'stellaR: a Package to Manage Stellar Evolution Tracks and Isochrones'
     bibtitle: '{stellaR}: a Package to Manage Stellar Evolution Tracks and Isochrones'
     slug: valle-dellomodarme
@@ -1103,7 +1103,7 @@ issues:
     - Matteo Dell'Omodarme
     pages:
     - 108
-    - 117
+    - 116
   - title: Let Graphics Tell the Story - Datasets in R
     bibtitle: 'Let Graphics Tell the Story -- {D}atasets in {R}'
     slug: hofmann-unwin-cook
@@ -1113,7 +1113,7 @@ issues:
     - Dianne Cook
     pages:
     - 117
-    - 130
+    - 129
   - title: Estimating Spatial Probit Models in R
     bibtitle: 'Estimating Spatial Probit Models in {R}'
     slug: wilhelm-matos
@@ -1122,7 +1122,7 @@ issues:
     - Miguel Godinho de Matos
     pages:
     - 130
-    - 144
+    - 143
   - title: 'ggmap: Spatial Visualization with ggplot2'
     bibtitle: '{ggmap}: Spatial Visualization with {ggplot2}'
     slug: kahle-wickham
@@ -1131,14 +1131,14 @@ issues:
     - Hadley Wickham
     pages:
     - 144
-    - 162
+    - 161
   - title: 'mpoly: Multivariate Polynomials in R'
     bibtitle: '{mpoly}: Multivariate Polynomials in {R}'
     slug: kahle
     author: David Kahle
     pages:
     - 162
-    - 171
+    - 170
   - title: 'The beadarrayFilter: An R Package to Filter Beads'
     bibtitle: 'The {beadarrayFilter}: An {R} Package to Filter Beads'
     slug: forcheh-verbeke-kasim-etal
@@ -1153,7 +1153,7 @@ issues:
     - Lieven Clement
     pages:
     - 171
-    - 181
+    - 180
   - title: 'Fast Pure R Implementation of GEE: Application of the Matrix Package'
     bibtitle: 'Fast Pure {R} Implementation of {GEE}: Application of the {Matrix} Package'
     slug: mcdaniel-henderson-rathouz
@@ -1163,7 +1163,7 @@ issues:
     - Paul J. Rathouz
     pages:
     - 181
-    - 188
+    - 187
   - title: RcmdrPlugin.temis, a Graphical Integrated Text Mining Solution in R
     bibtitle: '{RcmdrPlugin.temis}, a Graphical Integrated Text Mining Solution in {R}'
     slug: bouchetvalat-bastin
@@ -1172,14 +1172,14 @@ issues:
     - Gilles Bastin
     pages:
     - 188
-    - 197
+    - 196
   - title: Directions for Improved Dependency Versioning in R
     bibtitle: 'Directions for Improved Dependency Versioning in {R}'
     slug: ooms
     author: Jeroen Ooms
     pages:
     - 197
-    - 207
+    - 206
   - title: 'Translating Probability Distributions: From R to BUGS and Back Again'
     bibtitle: 'Translating Probability Distributions: From {R} to {BUGS} and Back Again'
     slug: lebauer-dietze-bolker
@@ -1189,7 +1189,7 @@ issues:
     - Ben Bolker
     pages:
     - 207
-    - 210
+    - 209
   - heading: News and Notes
   - title: 'Conference Review: The 6th Chinese R Conference'
     bibtitle: 'Conference Review: The 6th {C}hinese {R} Conference'
@@ -1199,14 +1199,14 @@ issues:
     slug: chinese-r-conf
     pages:
     - 210
-    - 212
+    - 211
   - title: 'Conference Report: R/Finance 2013'
     bibtitle: 'Conference Report: {R/F}inance 2013'
     author: Joshua Ulrich
     slug: r-finance
     pages:
     - 212
-    - 215
+    - 214
   - title: The R User Conference 2013
     bibtitle: 'The {R} {U}ser {C}onference 2013'
     author: UseR 2013 Organising Committee
@@ -1214,7 +1214,7 @@ issues:
     slug: user2013
     pages:
     - 215
-    - 218
+    - 217
   - title: News from the Bioconductor Project
     bibtitle: 'News from the {B}ioconductor Project'
     author: Bioconductor Team
@@ -1222,14 +1222,14 @@ issues:
     slug: bioconductor
     pages:
     - 218
-    - 220
+    - 219
   - title: R Foundation News
     bibtitle: '{R} {F}oundation News'
     author: Kurt Hornik
     slug: r-foundation
     pages:
     - 220
-    - 221
+    - 220
   - title: Changes in R
     bibtitle: 'Changes in {R}'
     author: The R Core Team
@@ -1237,7 +1237,7 @@ issues:
     slug: r-changes
     pages:
     - 221
-    - 239
+    - 238
   - title: Changes on CRAN
     bibtitle: 'Changes on {CRAN}'
     author:
@@ -1251,7 +1251,7 @@ issues:
   year: 2013
   volume: 5
   num: 2
-  month: Dec
+  month: Dec.
   bibmonth: dec
   articles:
   - title: Editorial
@@ -1259,7 +1259,7 @@ issues:
     slug: editorial
     pages:
     - 3
-    - 4
+    - 3
   - heading: Contributed Research Articles
   - title: 'factorplot: Improving Presentation of Simple Contrasts in GLMs'
     bibtitle: '{factorplot}: Improving Presentation of Simple Contrasts in {GLM}s'
@@ -1268,14 +1268,14 @@ issues:
     bibauthor: David A. {Armstrong II}
     pages:
     - 4
-    - 16
+    - 15
   - title: 'spMC: Modelling Spatial Random Fields with Continuous Lag Markov Chains'
     bibtitle: '{spMC}: Modelling Spatial Random Fields with Continuous Lag {M}arkov Chains'
     slug: sartore
     author: Luca Sartore
     pages:
     - 16
-    - 29
+    - 28
   - title: RNetCDF – A Package for Reading and Writing NetCDF Datasets
     bibtitle: '{RNetCDF} -- A Package for Reading and Writing {NetCDF} Datasets'
     slug: michna-woods
@@ -1284,7 +1284,7 @@ issues:
     - Milton Woods
     pages:
     - 29
-    - 37
+    - 36
   - title: Surface Melting Curve Analysis with R
     bibtitle: 'Surface Melting Curve Analysis with {R}'
     slug: roediger-bohm-schimke
@@ -1294,7 +1294,7 @@ issues:
     - Ingolf Schimke
     pages:
     - 37
-    - 53
+    - 52
   - title: Performance Attribution for Equity Portfolios
     slug: lu-kane
     author:
@@ -1312,7 +1312,7 @@ issues:
     - Guogen Shan
     pages:
     - 62
-    - 71
+    - 70
   - title: 'rlme: An R Package for Rank-Based Estimation and Prediction in Random Effects Nested Models'
     bibtitle: '{rlme}: An {R} Package for Rank-Based Estimation and Prediction in Random Effects Nested Models'
     slug: bilgic-susmann
@@ -1321,7 +1321,7 @@ issues:
     - Herb Susmann
     pages:
     - 71
-    - 80
+    - 79
   - title: Temporal Disaggregation of Time Series
     slug: sax-steiner
     author:
@@ -1329,14 +1329,14 @@ issues:
     - Peter Steiner
     pages:
     - 80
-    - 88
+    - 87
   - title: Dynamic Parallelization of R Functions
     bibtitle: 'Dynamic Parallelization of {R} Functions'
     slug: boehringer
     author: Stefan Boehringer
     pages:
     - 88
-    - 97
+    - 96
   - title: 'CompLognormal: An R Package for Composite Lognormal Distributions'
     bibtitle: '{CompLognormal}: An {R} Package for Composite Lognormal Distributions'
     slug: nadarajah-bakar
@@ -1345,14 +1345,14 @@ issues:
     - S. A. A. Bakar
     pages:
     - 97
-    - 104
+    - 103
   - title: 'lfe: Fitting Linear Models with Multiple Factors with Many Levels'
     bibtitle: '{lfe}: Fitting Linear Models with Multiple Factors with Many Levels'
     slug: gaure
     author: Simen Gaure
     pages:
     - 104
-    - 117
+    - 116
   - title: The R in Robotics
     bibtitle: 'The {R} in Robotics'
     slug: dietrich-zug-kaiser
@@ -1366,28 +1366,28 @@ issues:
     - J{\" o}rg Kaiser
     pages:
     - 117
-    - 129
+    - 128
   - title: On Sampling from the Multivariate t Distribution
     bibtitle: 'On Sampling from the Multivariate $t$ Distribution'
     slug: hofert
     author: Marius Hofert
     pages:
     - 129
-    - 137
+    - 136
   - title: 'betategarch: Simulation, Estimation and Forecasting of Beta-Skew-t-EGARCH Models'
     bibtitle: '{betategarch}: Simulation, Estimation and Forecasting of {B}eta-Skew-$t$-{EGARCH} Models'
     slug: sucarrat
     author: Genaro Sucarrat
     pages:
     - 137
-    - 148
+    - 147
   - title: Changes to grid from 3.0.0
     bibtitle: 'Changes to {grid} from 3.0.0'
     slug: murrell
     author: Paul Murrell
     pages:
     - 148
-    - 161
+    - 160
   - heading: News and Notes
   - title: R Foundation News
     bibtitle: '{R} {F}oundation News'
@@ -1395,7 +1395,7 @@ issues:
     slug: r-foundation
     pages:
     - 161
-    - 162
+    - 161
   - title: News from the Bioconductor Project
     bibtitle: 'News from the {B}ioconductor Project'
     author: Bioconductor Team
@@ -1403,7 +1403,7 @@ issues:
     slug: bioconductor
     pages:
     - 162
-    - 164
+    - 163
   - title: 'Conference Report: Deuxièmes Rencontres R'
     bibtitle: 'Conference Report: Deuxi{\` e}mes Rencontres {R}'
     author:
@@ -1412,7 +1412,7 @@ issues:
     slug: siberchicot-dray
     pages:
     - 164
-    - 166
+    - 165
   - title: Changes on CRAN
     bibtitle: 'Changes on {CRAN}'
     author:
@@ -1421,7 +1421,7 @@ issues:
     slug: cran
     pages:
     - 166
-    - 192
+    - 191
   - title: Changes in R
     bibtitle: 'Changes in {R}'
     author: The R Core Team
