add demirhan slug

--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,9 @@ issues:
     - Maciej Eder
     - Jan Rybicki
     - Mike Kestemont
+  - title: 'rTableICC: An R Package for Random Generation of 2*2*K and R*C Contingency Tables'
+    slug: demirhan
+    author: Haydar Demirhan 
 - issue: 2009-1
   year: 2009
   volume: 1
