new online articles

--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,44 @@ issues:
       R$\times$C Contingency Tables'
     slug: demirhan
     author: Haydar Demirhan
+  - title: 'SWMPr: An R Package for Retrieving, Organizing, and Analyzing Environmental
+      Data for Estuaries'
+    slug: beck
+    author: Marcus W Beck
+  - title: 'SchemaOnRead: A Package for Schema-on-Read in R'
+    slug: north
+    author: Michael North
+  - title: Bridges associated to fractional Brownian motion and multifractional Brownian
+      motion.
+    slug: sophie-brouste-istas
+    author:
+    - Lambert-Lacroix Sophie
+    - Alexandre Brouste
+    - Jacques Istas
+  - title: Exploring Interaction Effects in Factorial Studies using the hiddenf Package
+      in R
+    slug: franck-osborne
+    author:
+    - Christopher T. Franck
+    - Jason A. Osborne
+  - title: Model Builder for Item Factor Analysis with OpenMx
+    slug: pritikin-schmidt
+    author:
+    - Joshua Pritikin
+    - Karen Schmidt
+  - title: 'CryptRndTest: An R Package for Testing the Cryptographic Randomness'
+    slug: demirhan-bitirim
+    author:
+    - Haydar Demirhan
+    - Nihan Bitirim
+  - title: 'Variable Clustering in High-Dimensional Linear Regression: The R Package
+      clere'
+    slug: jacques-yengo-biernacki-etal
+    author:
+    - Julien Jacques
+    - Loïc Yengo
+    - Christophe Biernacki
+    - Mickael Canouil
 - issue: 2009-1
   year: 2009
   volume: 1
