--- a/_config.yml
+++ b/_config.yml
@@ -78,6 +78,13 @@ issues:
     - Loïc Yengo
     - Christophe Biernacki
     - Mickael Canouil
+  - title: 'FWDselect: An R Package for Variable Selection in Regression Models'
+    slug: sestelo-villanueva-meiramachado-etal
+    author:
+    - Marta Sestelo
+    - Nora M. Villanueva
+    - Luís Meira-Machado
+    - Javier Roca-Pardiñas
 - issue: 2009-1
   year: 2009
   volume: 1
