--- a/_config.yml
+++ b/_config.yml
@@ -85,6 +85,23 @@ issues:
     - Nora M. Villanueva
     - Luís Meira-Machado
     - Javier Roca-Pardiñas
+  - title: 'clustering.sc.dp: Optimal Clustering with Sequential Constraint by Using
+      Dynamic Programming'
+    slug: szkaliczki
+    author: Tibor Szkaliczki
+  - title: 'keyplayer: An R Package for Locating Key Players in Social Networks'
+    slug: an-liu
+    author:
+    - Weihua An
+    - Yu-Hsin Liu
+  - title: 'progenyClust: an R package for Progeny Clustering'
+    slug: hu-qutub
+    author:
+    - Chenyue W. Hu
+    - Amina A. Qutub
+  - title: Using DECIPHER v2.0 to Analyze Big Biological Sequence Data in R
+    slug: wright
+    author: Erik Wright
 - issue: 2009-1
   year: 2009
   volume: 1
