--- a/_config.yml
+++ b/_config.yml
@@ -102,6 +102,38 @@ issues:
   - title: Using DECIPHER v2.0 to Analyze Big Biological Sequence Data in R
     slug: wright
     author: Erik Wright
+  - title: 'metaplus: An R Package for the Analysis of Robust Meta-Analysis and Meta-Regression'
+    slug: beath
+    author: Dr Ken J. Beath
+  - title: Crowdsourced Data Preprocessing with R and Amazon Mechanical Turk
+    slug: leeper
+    author: Thomas J. Leeper
+  - title: Spatio-Temporal Geostatistics using gstat
+    slug: na-pebesma-heuvelink
+    author:
+    - Benedikt Gräler
+    - Edzer Pebesma
+    - Gerard Heuvelink
+  - title: R Packages to Aid in Handling Web Access Logs
+    slug: keyes-rudis-jacobs
+    author:
+    - Oliver Keyes
+    - Bob Rudis
+    - Jay Jacobs
+  - title: 'GMDH: An R Package for Short Term Forecasting via GMDH - Type Neural Network
+      Algorithms'
+    slug: yozgatligil-dag
+    author:
+    - Ceylan Yozgatligil
+    - Osman Dag
+  - title: 'mclust 5: Clustering, Classification and Density Estimation Using Gaussian
+      Finite Mixture Models'
+    slug: scrucca-fop-murphy-etal
+    author:
+    - Luca Scrucca
+    - Michael Fop
+    - T. Brendan Murphy
+    - Adrian E. Raftery
 - issue: 2009-1
   year: 2009
   volume: 1
