fix title and author order for 2014-33

--- a/_config.yml
+++ b/_config.yml
@@ -2060,14 +2060,14 @@ issues:
     pages:
     - 24
     - 37
-  - title: 'rdrobust: An R Package for Robust Inference in Regression-Discontinuity
+  - title: 'rdrobust: An R Package for Robust Nonparametric Inference in Regression-Discontinuity
       Designs'
     bibtitle: '{rdrobust}: An {R} Package for Robust Inference in Regression-Discontinuity
       Designs'
     slug: cattaneo-calonico-titiunik
     author:
-    - Matias D. Cattaneo
     - Sebastian Calonico
+    - Matias D. Cattaneo
     - Rocio Titiunik
     pages:
     - 38
