--- a/_config.yml
+++ b/_config.yml
@@ -134,6 +134,21 @@ issues:
     - Michael Fop
     - T. Brendan Murphy
     - Adrian E. Raftery
+  - title: 'Maps, coordinate reference systems and visualising geographic data with
+      mapmisc (was: Simple and flexible maps of geospatial data with mapmisc)'
+    slug: brown
+    author: Patrick Brown
+  - title: 'sbtools: A package connecting R to cloud-based data for collaborative
+      online research'
+    slug: winslow-chamberlain-appling-etal
+    author:
+    - Luke A Winslow
+    - Scott Chamberlain
+    - Alison P Appling
+    - Jordan S Read
+  - title: Gender Prediction Methods Based on First Names with genderizeR
+    slug: wais
+    author: Kamil Wais
 - issue: 2009-1
   year: 2009
   volume: 1
