edited titles for 2015-50 and 2015-20

--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ issues:
   - title: Crowdsourced Data Preprocessing with R and Amazon Mechanical Turk
     slug: leeper
     author: Thomas J. Leeper
-  - title: Spatio-Temporal Geostatistics using gstat
+  - title: Spatio-Temporal Interpolation using gstat
     slug: na-pebesma-heuvelink
     author:
     - Benedikt Gräler
@@ -135,7 +135,7 @@ issues:
     - T. Brendan Murphy
     - Adrian E. Raftery
   - title: 'Maps, coordinate reference systems and visualising geographic data with
-      mapmisc (was: Simple and flexible maps of geospatial data with mapmisc)'
+      mapmisc'
     slug: brown
     author: Patrick Brown
   - title: 'sbtools: A package connecting R to cloud-based data for collaborative
