--- a/_config.yml
+++ b/_config.yml
@@ -149,6 +149,14 @@ issues:
   - title: Gender Prediction Methods Based on First Names with genderizeR
     slug: wais
     author: Kamil Wais
+  - title: 'multipleNCC: Inverse probability weighting of nested case-control data'
+    slug: stoer-samuelsen
+    author:
+    - Nathalie C. Stoer
+    - Sven Ove Samuelsen
+  - title: Geographic visualization and analysis in R with tigris
+    slug: walker
+    author: Kyle Walker
 - issue: 2009-1
   year: 2009
   volume: 1
